[package]
name = "cgol2"
version = "0.1.0"
edition = "2021"
publish = ["phylum"]

[dependencies]
clap = { version = "4.5.18", registry = "phylum", features = ["derive"] }
env_logger = { version = "0.11.5", registry = "phylum" }
log = { version = "0.4.22", registry = "phylum" }
pixels = { version = "0.13.0", registry = "phylum" }
rand = { version = "0.8.5", registry = "phylum" }
strum = { version = "0.26.3", registry = "phylum", features = ["derive"] }
winit = { version = "0.28.0", registry = "phylum" }
